--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://syahrulrmdhon.github.io/cuaca-app",
   "dependencies": {
+    "bootstrap": "^4.1.2",
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
